# FrogUI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api-gateway/: Cargo.toml
apps/api-gateway/src/: config.rs  main.rs
apps/api-gateway/src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_guard.rs
apps/api-gateway/src/models/: agent.rs
apps/api-gateway/src/routes/: command.rs  health.rs  mod.rs  sse.rs
apps/api-gateway/src/services/: audit.rs  cli_runner.rs  core_client.rs  db.rs  memory.rs  mod.rs  redis_state.rs  stream.rs
apps/core-engine/: CMakeLists.txt
apps/core-engine/include/frogui/: agent.hpp  context_manager.hpp  http_server.hpp  inference.hpp  memory.hpp  task_executor.hpp
apps/core-engine/models/: README.md
apps/core-engine/protocols/: agent_request.schema.json  agent_response.schema.json
apps/core-engine/src/: agent.cpp  context_manager.cpp  http_server.cpp  inference.cpp  main.cpp  memory.cpp  task_executor.cpp
apps/core-engine/tests/: main_test.cpp  test_executor.cpp
apps/frontend/: package.json
apps/frontend/src/: App.jsx
apps/studio/: index.html  package.json
apps/studio/src/: App.jsx  main.js  main.jsx
apps/studio/src/components/: FlowVisualizer.jsx
apps/studio/src/theme/: app.css
database/postgres/init/: 002_agent_memory.sql  003_audit_log.sql
database/redis/: redis.conf
docs/: api-reference.md  architecture.md  communication-flow.md  deployment.md  project-structure.md  ui-design-principles.md
examples/react/: App.jsx
examples/vanilla-web-components/: index.html
infra/docker/: api-gateway.Dockerfile  core-engine.Dockerfile  studio.Dockerfile
infra/observability/: prometheus.yml
infra/security/: sandbox-policy.md  threat-model.md
scripts/: build-all.sh  download_model.sh  reset-local-db.sh  run_agent.sh
tests/e2e/: ui-flow.md
tests/integration/: communication-flow.md
tests/load/: load-profile.md
