[package]
name = "frogui-api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
actix-web-httpauth = "0.8.2"
async-stream = "0.3"
awc = "3"
bytes = "1"
dotenvy = "0.15"
env_logger = "0.11"
futures-util = "0.3"
jsonwebtoken = "9"
log = "0.4"
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", features = ["postgres", "uuid", "chrono", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

